--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
   <title>About Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="css/about.css">
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
@@ -75,7 +78,7 @@
             <label for="message" class="form-label">Pesan / Kritik / Saran</label>
             <textarea class="form-control" id="message" rows="5" name="pesan" required></textarea>
           </div>
-          <button type="submit" class="btn btn-warning w-100">Kirim</button>
+          <button type="submit" class="btn btn-warning w-100" onclick="sendMail()">Kirim</button>
         </form>
       </div>
     </div>
