--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <p class="text-center text-muted mb-4">Kami menghargai masukan dari Anda. Silakan isi form di bawah ini.</p>
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <form action="https://formspree.io/f/mgvyvdjp" method="POST">
+        <form `method="POST">
           <div class="mb-3">
             <label for="name" class="form-label">Nama</label>
             <input type="text" class="form-control" id="name" name="nama" required>
