--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
   <title>About Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="css/about.css">
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script>
+    (function(){
+      emailjs.init("_zY018WcASe2JOn4v");
+    })();
+  </script>
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
@@ -40,37 +49,56 @@
   <section class="about-section">
     <h2>Cerita Kami</h2>
     <p>
-      Kami memulai <strong>gutes Essen</strong> dengan satu tujuan sederhana: membawa kelezatan sosis khas Jerman ke hadapan Anda. Dari jalanan Berlin yang penuh semangat hingga dapur tradisional Bavaria, kami terinspirasi oleh cita rasa yang kaya sejarah dan budaya.
+      Kami memulai <strong>gutes Essen</strong> dengan satu tujuan sederhana: membawa kelezatan sosis dan minuman tradisional khas Jerman ke hadapan Anda. Dari jalanan Berlin yang penuh semangat hingga dapur tradisional Bavaria, kami terinspirasi oleh cita rasa yang kaya sejarah dan budaya.
     </p>
     <p>
-      Melalui platform ini, kami ingin lebih dari sekadar menyajikan daftar menu. Kami ingin berbagi kisah, fakta unik, dan semangat dari setiap jenis sosis yang kami tampilkan. Setiap halaman adalah hasil eksplorasi, penelitian, dan rasa cinta terhadap kuliner khas Jerman.
+      Melalui platform ini, kami ingin lebih dari sekadar menyajikan daftar menu. Kami ingin berbagi kisah, fakta unik, dan semangat dari setiap jenis sosis atau minuman yang kami tampilkan. Setiap halaman adalah hasil eksplorasi, penelitian, dan rasa cinta terhadap kuliner khas Jerman.
     </p>
     <p>
-      Bagi kami, makanan adalah jembatan yang menghubungkan budaya dan manusia. Kami harap Anda dapat merasakannya di setiap klik dan gigitan virtual Anda di situs ini.
+      Bagi kami, makanan dan minuman adalah jembatan yang menghubungkan budaya dan manusia. Kami harap Anda dapat merasakannya di setiap klik dan gigitan virtual Anda di situs ini.
     </p>
   </section>
 
-  <section class="values">
-    <h3>Nilai-Nilai Kami</h3>
-    <div class="values-list">
-      <div class="value-item">
-        <h4>Otentik</h4>
-        <p>Setiap cerita dan menu bersumber dari referensi budaya asli Jerman.</p>
-      </div>
-      <div class="value-item">
-        <h4>Informasi & Edukasi</h4>
-        <p>Kami ingin Anda mengenal lebih dari sekadar rasa — tapi juga sejarahnya.</p>
-      </div>
-      <div class="value-item">
-        <h4>Visual & Pengalaman</h4>
-        <p>Gambar, layout, dan bahasa kami rancang agar pengalaman Anda menyenangkan.</p>
+<hr>
+
+<div class="text-center mb-4">
+  <button id="showFormBtn" class="btn btn-outline-warning">Beri Kritik & Saran</button>
+</div>
+
+<section id="contact" class="py-5 bg-light mb-5">
+  <div id="formSection" class="hidden-form">
+    <h2 class="text-center text-warning mb-4">Kritik & Saran</h2>
+    <p class="text-center text-muted mb-4">Kami menghargai masukan dari Anda. Silakan isi form di bawah ini.</p>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form method="POST" onsubmit="sendMail(event)">          
+          <div class="mb-3">
+            <label for="name" class="form-label">Nama</label>
+            <input type="text" class="form-control" id="name" name="nama" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email Anda</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="subject" class="form-label">Subjek</label>
+            <input type="text" class="form-control" id="subject" name="subject" required></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Pesan / Kritik / Saran</label>
+            <textarea class="form-control" id="message" rows="5" name="pesan" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning w-100" onsubmit="sendMail(event)">Kirim</button>
+        </form>
       </div>
     </div>
-  </section>
-
-  <div class="footer">
-    <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
   </div>
+</section>
+
+<div class="footer">
+  <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/about.js"></script>
 </body>
 </html>
